@@ -1,5 +1,9 @@
 PasswordResetTool 1.2 - Unreleased
 
+  - Declare package dependencies, fixed deprecation warnings for use of
+    Globals and fixed deprecation warnings for the md5 module.
+    [hannosch]
+
   - Adjusted browser tests to no longer rely on the login portlet.
     [hannosch]
 
